Enable Ganesh dithering

We currently build Skia with SK_IGNORE_GPU_DITHER, effectively disabling GPU dithering.

Remove the build flag to align Ganesh with the sw rasterizer dithering behavior.

Note: Blink only sets the SkPaint dither flag for gradients at this time.

Aside from the flag change, this CL includes:

  * a handful of trivial layout tests rebaselines
  * some Canvas layout/unit test adjustments (relaxed exact pixel value checks to
    accommodate dithering)
  * a couple of trivial GPU pixel test rebaselines

BUG=731693

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I2fc6f8d23272504838c55427c48c4ea7d641deae
Reviewed-on: https://chromium-review.googlesource.com/535714
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Mike Reed <reed@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481033}
Former-commit-id: 2c7ac296e83c249dfa537962210fe4e48822488d